--- a/assets/front.css
+++ b/assets/front.css
@@ -17,6 +17,7 @@
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 2rem;
     margin: 2rem 0;
+    max-width: 945px;
 }
 
 .ffp-card {
