--- a/assets/front.css
+++ b/assets/front.css
@@ -53,7 +53,7 @@ p, .ffp-card-meta,
 
 /* Featured Floor Plans Section (Home Page) */
 .ffp-featured-section {
-    max-width: fit-content;
+    max-width: none;
     width: 100%;
     margin: 3rem 0;
 }
